# team2

./: .gitignore  CMakeLists.txt  ahh1.pkl  annotator_positions.pkl  annotator_positions_sim.pkl  code  codeclasdasdasd  demo.pkl  food_items.pkl  notworking_p5.pkl  open-door.pkl  p1-backup.pkl  p1.pkl  p2.pkl  p2v2.pkl  p3-notinuse.pkl  p3.pkl  p3_17.pkl  p4a-backup.pkl  p4a-backup3.pkl  p4a-last-pose-failed.pkl  p4a.pkl  p4a_v3.pkl  p4b.pkl  p4b_backup2.pkl  p5.pkl  p6.pkl  p6a.pkl  p7.pkl  part1.pkl  pbd1_move.pkl  pbd1_move2.pkl  place2.pkl  poke.pkl  segment3a-pre.pkl  side.pkl  sidebyside.pkl  start_pos.pkl  test.pkl  test2.pkl  (+2 more)
2019.3.14 - pkl files/: open-microwave.pkl  p2.pkl  p2b.pkl  pbd1_grab.pkl  pbd1_v1.pkl
applications/: package.xml
applications/config/: navigation-lab16.rviz  (+2 more)
bad_pkls/: pbd1_v2.pkl  pbd1_v3.pkl
good_pbd_files/: pbd2_v2.pkl  pbd2_v3.pkl  pbd2_v4.pkl
joint_state_reader/: package.xml
kiet/: p2.pkl  p4a.pkl  p4b.pkl
map_annotator/: CMakeLists.txt  annotator_positions.pkl  package.xml
maps/: map.yaml
old_pkl_files/: annotator_positions.pkl  demo2.pkl  demy.pkl  food_items.pkl  grip.pkl  hello.pkl  open-microwave.pkl  positions.pkl  side2.pkl  side3.pkl  test-sim.pkl
pbd/: CMakeLists.txt  p5_last_move_failed.pkl  p6b.pkl  package.xml  setup.py
perception/: CMakeLists.txt  package.xml
roboeats/: CMakeLists.txt  README.md  package.xml  setup.py
rviz/: navigation.rviz
rviz_settings/: default.rviz  lab21-kiet.rviz  lab29.rviz
web_teleop/: CMakeLists.txt  package.xml
zzzz_GOOD PKLS/: p1.pkl  p2b.pkl  start_pos.pkl
(+122 files in other folders)
